# mz80emu

./: .gitignore  CMakeLists.txt  README.md  config.txt
config/: config.txt
doc/: Main.md
doc/config/: config.md
doc/modules/: Modules.md
doc/src/: Main.md  MainFrame.md  MainFrameApp.md  config.md  init.md  loadConfig.md  misc.md  validation.md
doc/src/modules/: Modules.md
doc/src/modules/testDll/: tests.md
doc/src/unitTests/: misc.md  validation.md
src/: CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  MainFrameApp.cpp  MainFrameApp.hpp  config.cpp  config.hpp  config.txt  configWindows.hpp  init.cpp  init.hpp  loadConfig.cpp  loadConfig.hpp  loadDLL.c  loadMod.h  loadSO.c  loadlib.c  loadlib.h  main.cpp  main.hpp  mainWx.hpp  misc.c  misc.cpp  misc.h  misc.hpp  test.c  test.h  testdll.c  validation.cpp  validation.hpp
src/modules/: CMakeLists.txt  README.md  module.h  moduleFunctions.c  moduleInternal.h  moduleWindows.h  test_moduleFunctions.cpp
src/modules/memory/: README.md  memoryMod.c  memoryMod.h
src/modules/memory/unitTests/: test.cpp
src/modules/test/: testMod.c  testMod.h  testdll.c  testdll.h
src/modules/test/unitTests/: main.c  test.c  test.cpp  test.h
src/modules/ui/: App.cpp  App.h  MainFrame.cpp  MainFrame.h
src/modules/z80cpu/: README.md  decode.c  decode.h  execute.c  execute.h  execute_arit.c  execute_arit.h  execute_arit16.c  execute_arit16.h  execute_bsr.c  execute_bsr.h  execute_control.c  execute_control.h  execute_exchange.c  execute_exchange.h  execute_jump.c  execute_jump.h  execute_load.c  execute_load.h  execute_load16.c  execute_load16.h  execute_rotate.c  execute_rotate.h  mOperations.c  mOperations.h  z80cpuMod.c  z80cpuMod.h
src/modules/z80cpu/unitTests/: test.cpp
src/ui/: App.cpp  App.h  CMakeLists.txt  ConfiguratorFrame.cpp  ConfiguratorFrame.h  FileOperations.cpp  FileOperations.hpp  FileOpsWindows.cpp  MainFrame.cpp  MainFrame.h
src/ui/MemoryModele/: MemoryModule.cpp  MemoryModule.hpp
src/ui/MemoryModule/: MemoryModule.cpp  MemoryModule.hpp
src/ui/img/: nextTick.xcf  runClock.xcf  stopClock.xcf
src/ui/memory_module/: MemoryModule.cpp  MemoryModule.hpp
src/uiModules/: CMakeLists.txt  uiModule.hpp  uiModuleFunctions.cpp  uiModuleInternal.hpp  uiModuleWindows.hpp
src/uiModules/memory/: memoryUiMod.cpp  memoryUiMod.hpp
src/uiModules/test/: testUiMod.cpp  testUiMod.hpp
src/uiModules/z80cpu/: editableLabel.cpp  editableLabel.hpp  oneBitLabel.cpp  oneBitLabel.hpp  z80cpuUiMod.cpp  z80cpuUiMod.hpp
src/unitTestLib/: unitTest.c  unitTest.h
src/unitTestSystem/: README.md  getTestFuncs.h  testFuncs.h  unitTest.c  unitTest.h
src/unitTests/: CMakeLists.txt  init.cpp  init.h  init.hpp  main.cpp  main.h  mainFunctions.h  misc.cpp  misc.h  validation.cpp
