add_executable(configurator ConfiguratorFrame.cpp App.cpp)
add_executable(main ../MainFrame.cpp ../MainFrameApp.cpp)
if(WIN32)
    target_link_libraries(configurator wx::core wx::base)
    target_link_libraries(main wx::core wx::base)
elseif(UNIX)
    target_link_libraries(configurator ${wxWidgets_LIBRARIES})
    target_link_libraries(main ${wxWidgets_LIBRARIES})
endif()
