add_executable(configurator MainFrame.cpp App.cpp)
add_executable(memory-module MemoryModule/MemoryModule.cpp)
if(WIN32)
    target_link_libraries(configurator wx::core wx::base)
    target_link_libraries(memory-module wx::core wx::base)
elseif(UNIX)
    target_link_libraries(configurator ${wxWidgets_LIBRARIES})
    target_link_libraries(memory-module ${wxWidgets_LIBRARIES})
endif()
